--- a/index.html
+++ b/index.html
@@ -1,41 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Secure Blog Uploader</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <title>Blog Uploader Tool</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+
+  <link href='https://fonts.googleapis.com/css?family=Nunito:700' media='all' rel='stylesheet' type='text/css'/>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+  <link rel="stylesheet" href="style.css">
 </head>
-<body class="bg-light">
 
-    <div class="container mt-5">
-        <div class="card shadow p-4">
-            <h2 class="text-center mb-4">Secure Blog Uploader</h2>
-            <form id="blogForm">
-                <div class="mb-3">
-                    <label class="form-label">API Key</label>
-                    <input type="password" id="apiKey" class="form-control" required>
-                </div>
-                <div class="mb-3">
-                    <label class="form-label">Title</label>
-                    <input type="text" id="title" class="form-control" required>
-                </div>
-                <div class="mb-3">
-                    <label class="form-label">Content</label>
-                    <textarea id="content" class="form-control" rows="5" required></textarea>
-                </div>
-                <div class="mb-3">
-                    <label class="form-label">Upload Image</label>
-                    <input type="file" id="image" class="form-control" accept="image/*" required>
-                </div>
-                <button type="submit" class="btn btn-primary w-100">Upload</button>
-            </form>
-            <p id="status" class="mt-3 text-center"></p>
-        </div>
+<body>
+  <div class="container-md vh-100 bg-dark text-light" data-bs-theme="dark">
+    <nav class="navbar sticky-top navbar-expand-lg bg-dark border-bottom border-body mb-3" data-bs-theme="dark">
+      <div class="container-fluid">
+        <a class="navbar-brand">Blog Uploader Tool</a>
+      </div>
+    </nav>
+    <form action="#" class="form-control border rounded">
+    <div class="container mt-3">
+      <div class="mb-3">
+        <label for="apikey" class="form-label">API Key</label>
+        <input type="password" class="form-control" id="apikey" placeholder="API Key" name="apikey" required>
+      </div>
+      <div class="mb-3">
+        <label for="title" class="form-label">Title</label>
+        <input type="text" class="form-control" id="title" placeholder="Title" name="title" required>
+      </div>
+      <div class="mb-3">
+        <label for="content" class="form-label">Content</label>
+        <textarea class="form-control" id="content" rows="5"></textarea>
+      </div>
+      <div class="mb-3">
+        <label for="image" class="form-label">Sources</label>
+        <input class="form-control" type="file" id="image" name="image" multiple>
+      </div>
+      <button type="submit" class="btn btn-primary w-100 mb-3">Upload</button>
     </div>
+    </form>
+    <p id="status" class="mt-3 text-center"></p>
 
-    <script>
-        document.getElementById("blogForm").addEventListener("submit", async function(e) {
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
+  <script>
+    document.getElementById("blogForm").addEventListener("submit", async function(e) {
             e.preventDefault();
 
             let formData = new FormData();
@@ -52,7 +66,6 @@
             let result = await response.json();
             document.getElementById("status").innerHTML = result.message;
         });
-    </script>
-
+  </script>
 </body>
-                      </html>
+    </html>
