--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body style="font-family:'Nunito', monospace;">
   <div class="container-md vh-100 bg-dark text-light" data-bs-theme="dark">
     <nav class="navbar sticky-top navbar-expand-lg bg-dark border-bottom border-body mb-3" data-bs-theme="dark">
       <div class="container-fluid">
